--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-
+GameDefaultMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Maps/TestMap.TestMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -26,6 +26,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/SimpleEditor")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SimpleEditor")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SimpleEditorGameModeBase")
+GameEngine=/Script/SimpleEditor.SinpleEditorGameEngine
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
